// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment editor fixed toolbar styles platform_editor_comments_border_radius is off border radius disabled should render sticky toolbar with correct styles 1`] = `
".css-ne6pwl-FixedToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-ne6pwl-FixedToolbarEmotion >div{}
.css-ne6pwl-FixedToolbarEmotion >div >div:first-of-type:not(style),.css-ne6pwl-FixedToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-ne6pwl-FixedToolbarEmotion .block-type-btn{padding-left:0;}
.css-ne6pwl-FixedToolbarEmotion span svg{max-width:100%;}
.css-gugpc6-FixedToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);}
.css-gugpc6-FixedToolbarEmotion >div{}
.css-gugpc6-FixedToolbarEmotion >div >div:first-of-type:not(style),.css-gugpc6-FixedToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-gugpc6-FixedToolbarEmotion .block-type-btn{padding-left:0;}
.css-gugpc6-FixedToolbarEmotion>div{}
@media (max-width: 490px){.css-gugpc6-FixedToolbarEmotion>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-gugpc6-FixedToolbarEmotion>div >div:first-of-type{}
@media (max-width: 490px){.css-gugpc6-FixedToolbarEmotion>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-gugpc6-FixedToolbarEmotion span svg{max-width:100%;}"
`;

exports[`comment editor fixed toolbar styles platform_editor_comments_border_radius is on border radius enabled should render sticky toolbar with border radius styles 1`] = `
".css-ne6pwl-FixedToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-ne6pwl-FixedToolbarEmotion >div{}
.css-ne6pwl-FixedToolbarEmotion >div >div:first-of-type:not(style),.css-ne6pwl-FixedToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-ne6pwl-FixedToolbarEmotion .block-type-btn{padding-left:0;}
.css-ne6pwl-FixedToolbarEmotion span svg{max-width:100%;}
.css-gugpc6-FixedToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);}
.css-gugpc6-FixedToolbarEmotion >div{}
.css-gugpc6-FixedToolbarEmotion >div >div:first-of-type:not(style),.css-gugpc6-FixedToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-gugpc6-FixedToolbarEmotion .block-type-btn{padding-left:0;}
.css-gugpc6-FixedToolbarEmotion>div{}
@media (max-width: 490px){.css-gugpc6-FixedToolbarEmotion>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-gugpc6-FixedToolbarEmotion>div >div:first-of-type{}
@media (max-width: 490px){.css-gugpc6-FixedToolbarEmotion>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-gugpc6-FixedToolbarEmotion span svg{max-width:100%;}
.css-1gy1kz0-FixedToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-1gy1kz0-FixedToolbarEmotion >div{}
.css-1gy1kz0-FixedToolbarEmotion >div >div:first-of-type:not(style),.css-1gy1kz0-FixedToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-1gy1kz0-FixedToolbarEmotion .block-type-btn{padding-left:0;}
.css-1gy1kz0-FixedToolbarEmotion>div{}
@media (max-width: 490px){.css-1gy1kz0-FixedToolbarEmotion>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-1gy1kz0-FixedToolbarEmotion>div >div:first-of-type{}
@media (max-width: 490px){.css-1gy1kz0-FixedToolbarEmotion>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-1gy1kz0-FixedToolbarEmotion span svg{max-width:100%;}"
`;

exports[`comment editor sticky toolbar styles should render sticky toolbar with correct styles 1`] = `
".css-g8urlt-StickyToolbarEmotion{position:relative;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:var(--ds-space-100, 8px) var(--ds-space-100, 8px) 0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;height:auto;background-color:var(--ds-surface, #FFFFFF);box-shadow:none;padding-left:var(--ds-space-250, 20px);position:-webkit-sticky;position:sticky;padding-bottom:var(--ds-space-100, 8px);z-index:500;-webkit-transition:box-shadow ease-in-out 0.2s;transition:box-shadow ease-in-out 0.2s;border-radius:var(--ds-radius-small, 3px) var(--ds-radius-small, 3px) 0 0;}
.css-g8urlt-StickyToolbarEmotion >div{}
.css-g8urlt-StickyToolbarEmotion >div >div:first-of-type:not(style),.css-g8urlt-StickyToolbarEmotion >div >style:first-of-type+*{margin-left:0;}
.css-g8urlt-StickyToolbarEmotion .block-type-btn{padding-left:0;}
.css-g8urlt-StickyToolbarEmotion>div{}
@media (max-width: 490px){.css-g8urlt-StickyToolbarEmotion>div{-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse;-webkit-align-items:end;-webkit-box-align:end;-ms-flex-align:end;align-items:end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;}}
.css-g8urlt-StickyToolbarEmotion>div >div:first-of-type{}
@media (max-width: 490px){.css-g8urlt-StickyToolbarEmotion>div >div:first-of-type >div:nth-of-type(2){-webkit-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}}
.css-g8urlt-StickyToolbarEmotion span svg{max-width:100%;}
.css-g8urlt-StickyToolbarEmotion.show-keyline{box-shadow:0 2px 0 0 var(--ds-background-accent-gray-subtlest, #F0F1F2);}"
`;
